# miniGPU

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  dev.html  package.json  pnpm-lock.yaml  tsconfig.json
examples/: blinn.rs  camera.rs  camera.wgsl  compute.rs  geometry.rs  geometry.wgsl  gltf.rs  graph.rs  image.rs  instance.rs  instance.wgsl  objloader.rs  orthographic_camera.rs  shader.comp.wgsl  sprite.rs  triangle.rs  triangle.wgsl  window.rs  xyzline.wgsl
examples/models/cube/: cube.mtl
examples/wasm/: Cargo.toml  index.html
examples/wasm/pkg/: wasm_bg.js  wasm_bg.wasm
examples/wasm/src/: lib.rs  mesh.wgsl
src/: MiniGPU.ts  Renderer.ts  Scene.ts  component_storage.rs  index.ts  lib.rs  mini_gpu.rs  renderer.rs  scene.rs  world.rs
src/Components/: Component.ts  Material.ts  Mesh.ts
src/Entity/: Entity.ts  MeshEntity.ts
src/System/: MeshRender.ts  System.ts
src/Utils/: Event.ts
src/components/: instance.rs  material.rs  mesh.rs  mesh_renderer.rs  mod.rs  orthographic_camera.rs  perspective_camera.rs  perspectivecamera.rs  transform.rs  viewport.rs
src/components/camera/: camera_common.rs  mod.rs  orthographic.rs  perspective.rs
src/components/controller/: fps.rs  map.rs  mod.rs  orbit.rs
src/components/lights/: ambient_light.rs  directional_light.rs  light.rs  mod.rs
src/components/materials/: basic.rs  blinn_phong.rs  image.rs  line.rs  mod.rs  pbr.rs  shader.rs  shaderlib.rs  sprite.rs
src/components/materials/shaderlibs/: camera_uniform.wgsl  lightstruct.wgsl  transform.wgsl  vertexstruct.wgsl
src/components/materials/shaders/: basic.wgsl  blinn_phong.wgsl  default.wgsl  image.wgsl  instance.wgsl  texture.wgsl
src/entity/: mesh_line.rs  mod.rs  sprite_entity.rs
src/geometry/: plane.rs  sphere.rs
src/resources/: env_bind_group_manager.rs  mod.rs  resource_manager.rs
src/resources/material/: basic.rs  blinn_phong.rs  mod.rs  pbr.rs  sprite.rs
src/resources/mesh/: mod.rs
src/resources/shaders/: axis.wgsl  basic.wgsl  blinn_phong.wgsl  default.wgsl  mod.rs  sprite.wgsl
src/resources/shaders/shaderlibs/: camera_uniform.wgsl
src/system/: hierarchy.rs  mesh_render.rs  mod.rs  system.rs  test.rs  transform.rs
src/tests/: ecs.rs  learn.rs  mod.rs
src/utils/: axis.rs  camera.rs  depth_texture.rs  gltf.rs  mod.rs  obj.rs  resource.rs  test_xyz.rs  texture.rs
