[package]
name = "mini_gpu"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "examples/wasm"
]

[dependencies] 
bytemuck = { version = "1.13", features = ["derive"] }
env_logger = "0.10.0"
image = "0.24.6"
pollster = "0.3.0"
wgpu = "0.20"
winit = "0.29"
cfg-if = "1.0.0"
glam = "0.24"
log = "0.4.19"
tobj = {version="4.0",features=["async"]}
reqwest = "0.11.20"
anyhow = "1.0.75"
regex = "1.9.5"
lazy_static = "1.4.0"
gltf = {version="1.4.1",features=["KHR_texture_transform"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.69", features = ["Document", "Window", "Element", "Location"] }
getrandom = { version = "0.2", features = ["js"] }

[build.rustflags]
cfg = "web_sys_unstable_api"

[check.rustflags]
cfg = "web_sys_unstable_api"
