[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies] 
bytemuck = { version = "1.13", features = ["derive"] }
pollster = "0.3.0"
cfg-if = "1.0.0"
wasm-bindgen = "0.2"
console_log = "1.0.0"
console_error_panic_hook = "0.1.7"
wasm-bindgen-futures = "0.4" 
mini_gpu = { path = "../../" }
log = "0.4"
winit = "0.29"
glam = "0.24"
image = "0.24"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.69", features = ["Document", "Window", "Element", "Location"] }
getrandom = { version = "0.2", features = ["js"] }
 
[build]
target = "wasm32-unknown-unknown"
target_arch = "wasm32"